--- a/new_api_test5.html
+++ b/new_api_test5.html
@@ -390,7 +390,7 @@
 				alert(result);
 			}
 			function clicked_open_app(){
-   			    mraid.extend.openApp("wb2162695501://");
+   			    mraid.extend.openApp("weibo://");
 			}
 		    function clicked_getRichData(){
 			    mraid.extend.getRichdata("getRichDataCallBack");
