修改分享面板错误jsAPI

--- a/new_api_test5.html
+++ b/new_api_test5.html
@@ -245,7 +245,7 @@
             }
             function clicked_show_share_pannel(){
                 document.getElementById("info").innerHTML = "request wx share panel";
-                var v = mraid.showSharePanel("titleCircel", "cotent", "http://www.qq.com", "http://imgcache.qq.com/ac/www_tencent/zh-cn/images/sitelogo_zh-cn.gif", "shareWxCallback");
+                var v = mraid.showSharePannel("titleCircel", "cotent", "http://www.qq.com", "http://imgcache.qq.com/ac/www_tencent/zh-cn/images/sitelogo_zh-cn.gif", "shareWxCallback");
             }
             
             function resize(){
