--- a/new_api_test5.html
+++ b/new_api_test5.html
@@ -244,10 +244,8 @@
                 var v = mraid.shareToWXTimeLine("titleCircel", "cotent", "http://www.qq.com", "http://imgcache.qq.com/ac/www_tencent/zh-cn/images/sitelogo_zh-cn.gif", "wxcallbackTimeline");
             }
             function clicked_show_share_pannel(){
-                document.getElementById("info").innerHTML = "request wx friend share";
-                var v = mraid.shareToWXFriend("titleCircel", "cotent", "http://www.qq.com", "http://imgcache.qq.com/ac/www_tencent/zh-cn/images/sitelogo_zh-cn.gif", "wxcallbackFriend");
-                // document.getElementById("info").innerHTML = "request wx share panel";
-                // var v = mraid.showSharePannel("titleCircel", "cotent", "http://www.qq.com", "http://imgcache.qq.com/ac/www_tencent/zh-cn/images/sitelogo_zh-cn.gif", "shareWxCallback");
+                document.getElementById("info").innerHTML = "request wx share panel";
+                var v = mraid.showSharePannel("titleCircel", "cotent", "http://www.qq.com", "http://imgcache.qq.com/ac/www_tencent/zh-cn/images/sitelogo_zh-cn.gif", "shareWxCallback");
             }
             
             function resize(){
